syntax = "proto3";
package protofiles;
// option go_package = "./";
option go_package = "github.com/gjlanc65/grpcprototest/protofiles";

message QuoteRequest {
  int32       first   = 1;
  int32       second  = 2;
  int32       third   = 3;
}

message QuoteResponse {
  string    quote   = 1;
}

service QuoteTransaction {
  rpc MakeQuote(QuoteRequest) returns (QuoteResponse) {}
}

// [W] install protoc and add to path (manual)
// [W] go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
// [W] go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
// [W] protoc --go_out=. --go_opt=paths=source_relative     --go-grpc_out=. --go-grpc_opt=paths=source_relative     protofiles/shakespeare.proto
